src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>Free text date of birth field or approximate age if Date of Birth not known</description>
        <label>Date of Birth or Approximate age</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disability__c</fullName>
        <description>New field for the HAS Form Implementation. This is a picklist field for a contact to record whether they consider themselves to have a disability. In the HAS Web Form, this field does not use the SF field label but uses a custom label instead</description>
        <label>Disability</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prefer not to say</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ethnic_Origin_Group__c</fullName>
        <description>New field for the HAS Form Implementation. This is a picklist field for a contact to record what Ethnicity they consider themselves to have. This will be a controlling picklist for the Ethnic Origin Field. In the HAS Web Form, this field does not use the SF field label but uses a custom label instead</description>
        <label>Ethnic Origin Group</label>
        <picklist>
            <picklistValues>
                <fullName>Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed ethnic background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prefer not to say</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ethnic_Origin__c</fullName>
        <description>New field for the HAS Form Implementation. This is a picklist field for a contact to record what Ethnicity they consider themselves to have. This will be a dependant picklist, controlled by the Ethnic Origin Group Field. In the HAS Web Form, this field does not use the SF field label but uses a custom label instead</description>
        <label>Ethnic Origin</label>
        <picklist>
            <controllingField>Ethnic_Origin_Group__c</controllingField>
            <picklistValues>
                <fullName>Bangladeshi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pakistani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Asian background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>African</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Black background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian and white</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black African and white</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black British</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black Caribbean and white</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other mixed ethnic background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other ethnic background</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Known_As__c</fullName>
        <description>Is the nominee known by a name other than that specified in the Name field.</description>
        <label>Known as</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <description>This is a new field being used by the HAS Form Implementation. It is used to store the nationality of a contact</description>
        <label>Nationality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Nominal__c</fullName>
        <description>Any letters after the nominee&apos;s name.</description>
        <inlineHelpText>e.g MBE, FRS</inlineHelpText>
        <label>Post-nominal</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_British__c</fullName>
        <description>User can select between British or a citizen of another country. which they must specify.</description>
        <label>Is British?</label>
        <picklist>
            <picklistValues>
                <fullName>British (including English, Scottish, Welsh and Northern Irish)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.ALLOW_PORTAL_SELF_REG</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Other_Nationality_cannot_be_empty</fullName>
        <active>true</active>
        <description>If Other is selected from is_British, this field cannot be empty</description>
        <errorConditionFormula>(ISPICKVAL(is_British__c, &apos;Other&apos;) &amp;&amp; (Nationality__c == null || Nationality__c == &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>Nationality__c</errorDisplayField>
        <errorMessage>Please specify your nationality</errorMessage>
    </validationRules>
</CustomObject>